gcc/testsuite/gdc.test/runnable/test3574c.d
//int g = 0;
//static ~this() { assert(g == 100); }

void main()
//out
//{
//    g = 100;
//}
//do
{
    return;
    // expected return code == 0
}
