gcc/testsuite/gdc.test/fail_compilation/fail7424e.d
struct S7424e
{
    @property int g()() immutable { return 0; }
    void test() { int f = g; }
}

